# rust-learning

./: .gitignore  README.md
access_array/: Cargo.toml
access_array/src/: main.rs
add/: Cargo.toml
add/adder/: Cargo.toml
adder/src/: lib.rs
adder/tests/: integration_test.rs
advanced_functions_closures/: Cargo.toml
advanced_functions_closures/src/: main.rs
advanced_traits/src/: lib.rs  main.rs
advanced_types/src/: main.rs
ardan-labs/thumbnail_server/: Cargo.toml  images.db-shm  images.db-wal
ardan-labs/thumbnail_server/migrations/: 20250226085346_initial.sql
ardan-labs/thumbnail_server/src/: index.html  main.rs  redirect.html  search.html
async_car_manufactures/: Cargo.toml  README.md
blog/src/: lib.rs  (+1 more)
celsius_to_fahrenheit/: Cargo.toml
closures_nd_iterators/: Cargo.toml
common_utilities/: Cargo.toml
counter/: Cargo.toml  NOTICE
empty-contract/: Cargo.toml
empty-contract/.cargo/: config.toml
empty-contract/schema/: empty-contract.json
empty-contract/schema/raw/: execute.json  instantiate.json  query.json  response_to_admins_list.json  response_to_greet.json
empty-contract/src/: contract.rs  error.rs  lib.rs  msg.rs
handle_error/: Cargo.toml
hello_macro/: Cargo.toml
hello_macro_derive/: Cargo.toml
hello_world/: main
learn_collections/: Cargo.toml
learn_enum/: Cargo.toml
notes_file/: Cargo.toml  README.md  notes.txt
nth_fibonacci/: Cargo.toml
object_oriented_concepts/: Cargo.toml
pattern_syntax/: Cargo.toml
restaurant_lib/: Cargo.toml
tree_data_structure/: Cargo.toml
web_server/: 404.html  hello.html
(+144 files in other folders)
