[package]
name = "thumbnail_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.19", features = ["multipart"] }
dotenv = "0.15.0"
futures = "0.3.28"
image = "0.24.6"
serde = { version = "1.0.180", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
